--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="font-src 'self' https://ducanhkst.github.io/; default-src 'none'">
+
     <title>Vite + TS</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
